# multithreaded-convolution-demo

./: CMakeLists.txt  README.md
dsp/: convolution_mine_st.cpp  convolution_mine_st.h  convolution_mt.cpp  convolution_mt.h  fft.cpp  fft.h  fft_recursive.cpp  fft_recursive.h  sampler.cpp  tail_worker.cpp
dsp/testing/: convolution_mine_st_test.cpp  convolution_mt_test.cpp  convolution_mt_vs_st_test.cpp  convolution_split_test.cpp  steppable_fft_test.cpp  tail_dropout_test.cpp  test_cmds.txt  time_distribution_test.cpp  upols_test.cpp
frontend/: index.html  package-lock.json  vite.config.ts
frontend/public/: audio-engine.js  dsp-processor.js  tail-engine.js  tail-worker.js
frontend/src/: App.tsx
naive_convolution/: circular-convolve.ts  dft.ts  idft.ts  linear-convolve.ts  multiply-spectra.ts  overlap-add-convolver.ts
